# pairwise_aligner

./: README.md
.github/workflows/: cancel.yml  ci_linux.yml  ci_macos.yml  ci_misc.yml
build_system/: lib_template-config-version.cmake  lib_template-config.cmake  pairwise_aligner-config-version.cmake  pairwise_aligner-config.cmake
doc/: main_page.md
include/lib_template/: initial.hpp  version.hpp
include/pairwise_aligner/: dp_initialisation_rule.hpp  dp_trailing_gaps.hpp  initial.hpp  pairwise_aligner.hpp  simd_score_type.hpp  type_traits.hpp  version.hpp
include/pairwise_aligner/affine/: affine_cell.hpp  affine_dp_algorithm.hpp  affine_gap_model.hpp  affine_initialisation_strategy.hpp  gap_model_affine.hpp  initialisation_strategy_affine.hpp
include/pairwise_aligner/align_configuration/: alignment_begin.hpp  alignment_end.hpp  alignment_kind.hpp  configuration.hpp  configure_cpo.hpp  enum_option.hpp  gap_cost_model.hpp  is_option_set_cpo.hpp  request.hpp  substitution_cost_model.hpp
include/pairwise_aligner/align_executor/: column_major.hpp
include/pairwise_aligner/align_matrix/: column_major.hpp  dp_entry_concept.hpp  dp_matrix_concept.hpp  dp_recursion_concept.hpp  linear_row_column_matrix.hpp  score_matrix.hpp
include/pairwise_aligner/align_recursion/: affine.hpp  global_recursion.hpp  local.hpp
include/pairwise_aligner/align_scoring_scheme/: affine_gap_cost.hpp  unitary_cost.hpp  zero_cost.hpp
include/pairwise_aligner/align_scout/: score_scout.hpp
include/pairwise_aligner/aligner/: column_wise.hpp  interleave.hpp  single.hpp
include/pairwise_aligner/alphabet_conversion/: alphabet_rank_map_scalar.hpp  alphabet_rank_map_simd.hpp
include/pairwise_aligner/configuration/: configure_aligner.hpp  configure_aligner_saturated.hpp  end_gap_policy.hpp  gap_model_affine.hpp  initial.hpp  method_global.hpp  method_local.hpp  rule_base.hpp  rule_category.hpp  rule_gap_model.hpp  rule_method.hpp  rule_score_model.hpp  saturated_block_handler.hpp  score_model_matrix.hpp  score_model_matrix_simd.hpp  score_model_matrix_simd_1xN.hpp  score_model_matrix_simd_NxN.hpp  score_model_matrix_simd_saturated_1xN.hpp  score_model_matrix_simd_saturated_NxN.hpp  score_model_unitary.hpp  score_model_unitary_simd.hpp  score_model_unitary_simd_saturated.hpp
include/pairwise_aligner/dp_algorithm_template/: dp_algorithm_attorney.hpp  dp_algorithm_template_base.hpp  (+3 more)
test/benchmark/: CMakeLists.txt
test/benchmark/affine/: CMakeLists.txt  alignment_benchmark_fixture.hpp  alignment_global_affine_benchmark.cpp  alignment_global_affine_matrix_benchmark.cpp  alignment_global_affine_simd_benchmark.cpp  alignment_global_affine_simd_matrix_1xN_benchmark.cpp  alignment_global_affine_simd_matrix_NxN_benchmark.cpp  alignment_global_affine_simd_matrix_benchmark.cpp  alignment_global_affine_simd_saturated_benchmark.cpp  alignment_global_affine_simd_saturated_matrix_1xN_benchmark.cpp  alignment_global_affine_simd_saturated_matrix_NxN_benchmark.cpp  alignment_local_affine_benchmark.cpp  alignment_local_affine_matrix_benchmark.cpp  alignment_local_affine_simd_benchmark.cpp  alignment_local_affine_simd_saturated_benchmark.cpp
test/benchmark/alphabet_conversion/: CMakeLists.txt  alphabet_conversion_benchmark.cpp
test/benchmark/auto_vectorisation/: CMakeLists.txt  simd_add_benchmark.cpp  simd_compare_and_blend_benchmark.cpp  simd_downcast_benchmark.cpp  simd_max_benchmark.cpp  simd_multiply_benchmark.cpp  simd_subtract_benchmark.cpp  simd_upcast_benchmark.cpp  simd_xor_benchmark.cpp
test/benchmark/precompiled/icelake/release/: alignment_global_affine_simd_matrix_benchmark
test/cmake/: configure_libunifex.cmake  configure_simd_flags.cmake  lib_template-test.cmake  pairwise_aligner-test.cmake
test/coverage/: CMakeLists.txt
test/doc/: CMakeLists.txt  README.md  lib_template-doxygen.cmake  lib_template_doxygen_cfg.in  pairwise_aligner-doxygen.cmake  pairwise_aligner_doxygen_cfg.in
test/doc/doc_dev/: CMakeLists.txt
test/doc/doc_usr/: CMakeLists.txt
test/header/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/affine/: CMakeLists.txt  alignment_global_affine_scalar_test.cpp  alignment_global_affine_simd_test.cpp  alignment_global_affine_test_template.hpp  alignment_scalar_test_template.hpp  alignment_simd_test_template.hpp  fixture_base.hpp  global_overlap_affine_fixed_simd_test.cpp  global_overlap_affine_saturated_simd_test.cpp  global_overlap_affine_scalar_test.cpp  global_semi_first_affine_fixed_simd_test.cpp  global_semi_first_affine_saturated_simd_test.cpp  global_semi_first_affine_scalar_test.cpp  global_semi_second_affine_fixed_simd_test.cpp  global_semi_second_affine_saturated_simd_test.cpp  global_semi_second_affine_scalar_test.cpp  global_standard_affine_fixed_simd_matrix_1xN_test.cpp  global_standard_affine_fixed_simd_matrix_NxN_test.cpp  global_standard_affine_fixed_simd_matrix_test.cpp  global_standard_affine_fixed_simd_test.cpp  global_standard_affine_saturated_simd_matrix_1xN_test.cpp  global_standard_affine_saturated_simd_matrix_NxN_test.cpp  global_standard_affine_saturated_simd_test.cpp  global_standard_affine_scalar_matrix_test.cpp  global_standard_affine_scalar_test.cpp  local_affine_fixed_simd_test.cpp  local_affine_saturated_simd_matrix_1xN_test.cpp  local_affine_saturated_simd_test.cpp  local_affine_scalar_test.cpp
test/unit/align_prompt/: CMakeLists.txt  single_aligner_test.cpp
test/unit/alphabet_conversion/: CMakeLists.txt  alphabet_rank_map_simd_test.cpp
test/unit/configuration/: CMakeLists.txt  configuration_test.cpp  configure_aligner_saturated_test.cpp
test/unit/fixture/: fixture_base.hpp
test/unit/init/: CMakeLists.txt  init_test.cpp
test/unit/matrix/: CMakeLists.txt  state_handle_test.cpp
test/unit/score_model/: CMakeLists.txt  score_model_matrix_simd_1xN_test.cpp  score_model_matrix_simd_NxN_test.cpp  score_model_matrix_simd_test.cpp
test/unit/sender/: CMakeLists.txt  align_pair_test.cpp  aligner_as_function_test.cpp
test/unit/simd/: CMakeLists.txt  simd_index_map_test.cpp  simd_score_saturated_test.cpp  simd_selector_avx2_test.cpp
(+92 files in other folders)
